--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,46 +1,54 @@
 !!! 5
-%html{:lang => "ja"}
+%html(lang="en")
   %head
-    %meta{:charset => "utf-8"}/
-    %title= content_for?(:title) ? yield(:title) : "DogmeetsFront"
+    %meta(charset="utf-8")
+    %meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    %title= content_for?(:title) ? yield(:title) : "Cont24"
     = csrf_meta_tags
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
       = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
-    / Le styles
     = stylesheet_link_tag "application", :media => "all"
-    / Le fav and touch icons
-    %link{:href => "images/favicon.ico", :rel => "shortcut icon"}/
-    %link{:href => "images/apple-touch-icon.png", :rel => "apple-touch-icon"}/
-    %link{:href => "images/apple-touch-icon-72x72.png", :rel => "apple-touch-icon", :sizes => "72x72"}/
-    %link{:href => "images/apple-touch-icon-114x114.png", :rel => "apple-touch-icon", :sizes => "114x114"}/
-
+    %link(href="images/favicon.ico" rel="shortcut icon")
+    %link(href="images/apple-touch-icon.png" rel="apple-touch-icon")
+    %link(href="images/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72")
+    %link(href="images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114")
 
   %body
     .navbar.navbar-fixed-top
       .navbar-inner
         .container
-          %a.btn.btn-navbar{"data-target" => ".nav-collapse", "data-toggle" => "collapse"}
+          %a.btn.btn-navbar(data-target=".nav-collapse" data-toggle="collapse")
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          %a.brand{:href => "/"}DogmeetsFront
+          %a.brand(href="#") Cont24
           .container.nav-collapse
             %ul.nav
-              %li= link_to "menu1", "menu1"
-              %li= link_to "menu2", "menu2"
+              %li= link_to "Link 1", "/path1"
+              %li= link_to "Link 2", "/path2"
+              %li= link_to "Link 3", "/path3"
 
     .container
+
       .content
         .row
           .span9
             = yield
-
+          .span3
+            .well.sidebar-nav
+              %h3 Sidebar
+              %ul.nav.nav-list
+                %li.nav-header Sidebar
+                %li= link_to "Link 1", "/path1"
+                %li= link_to "Link 2", "/path2"
+                %li= link_to "Link 3", "/path3"
+    
       %footer
-        %p &copy; Sociareal 2012
-
+        %p &copy; Company 2012
     /
-      Le javascript
+      Javascripts
       \==================================================
     / Placed at the end of the document so the pages load faster
     = javascript_include_tag "application"
+
