--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,45 +16,27 @@
 
   %body
     .navbar.navbar-fixed-top
-      .navbar-inner
-        .container
-          %a.btn.btn-navbar(data-target=".nav-collapse" data-toggle="collapse")
-            %span.icon-bar
-            %span.icon-bar
-            %span.icon-bar
-          %a.brand(href="#") Cont24
-          .container.nav-collapse
-            %ul.nav
-              %li= link_to "Link 1", "/path1"
-              %li= link_to "Link 2", "/path2"
-              %li= link_to "Link 3", "/path3"
+      -if authenticated?
+        .navbar-inner
+          .container
+            %a.btn.btn-navbar(data-target=".nav-collapse" data-toggle="collapse")
+              %span.icon-bar
+              %span.icon-bar
+              %span.icon-bar
+            %a.brand(href="#") Cont24
+            .container.nav-collapse
+              %ul.nav.pull-right
+                %li= image_tag current_user.icon_url, :class => "avatar size32"
+                %span= current_user.twitter_id
+                %li= link_to "anniversaries", "/anniversaries"
+                %li= link_to "HELP", "/help"
 
-    .container
+  = yield
 
-      .content
-        .row
-          .span9
-            - if current_user
-              =link_to "ログアウト" ,logout_path
-              =image_tag current_user.icon_url
-              = current_user.twitter_id
-            - else
-              = link_to "Twitterでlogin","/auth/twitter"
-            = yield
-          .span3
-            .well.sidebar-nav
-              %h3 Sidebar
-              %ul.nav.nav-list
-                %li.nav-header Sidebar
-                %li= link_to "Link 1", "/path1"
-                %li= link_to "Link 2", "/path2"
-                %li= link_to "Link 3", "/path3"
-    
-      %footer
-        %p &copy; Company 2012
-    /
-      Javascripts
-      \==================================================
-    / Placed at the end of the document so the pages load faster
-    = javascript_include_tag "application"
-
+  %footer
+  %p &copy; Company 2012
+  /
+    Javascripts
+    \==================================================
+  / Placed at the end of the document so the pages load faster
+  = javascript_include_tag "application"
