--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
       = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
     = stylesheet_link_tag "application", :media => "all"
     %link(href="images/favicon.ico" rel="shortcut icon")
-    %link(href="images/cutend-logo-square.png" rel="apple-touch-icon")
+    %link(href="/cutend-logo-square.png" rel="apple-touch-icon")
 
   %body
     .navbar.navbar-fixed-top
