説明文のところまで

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -6,4 +6,6 @@
       = link_to "Twitterでlogin","/auth/twitter", :class => 'btn btn-primary btn-large'
 - else
   ok dao !
-  
+
+.desc
+  ああああああああああ
