--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -4,7 +4,8 @@ body {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px; 
-  margin: auto 0; }
+  width: 640px;
+  margin: 0 auto; }
 
 p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
