--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,7 +32,7 @@
   = yield
 
   %footer
-  %p &copy; Company 2012
+  %p ホーム画面に追加してね！
   /
     Javascripts
     \==================================================
