タイトル修正

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,7 +21,7 @@
               %span.icon-bar
               %span.icon-bar
               %span.icon-bar
-            %a.brand(href="#") Cont24
+            %a.brand(href="/") CUTEND
             .container.nav-collapse
               %ul.nav.pull-right
                 %li= image_tag current_user.icon_url, :class => "avatar size32"
