--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -8,4 +8,14 @@
   ok dao !
 
 .desc
-  ああああああああああいいいいいいいいいいううううううううううええええええええええおおおおおおおおおお
+  %p
+    時空を歪ませる記念日登録サービスです！
+  %p
+    %span
+      時間はチクタクチクタクと容赦無く進み、カレンダーの一日はあっけなく終わってしまいます。
+    %span
+      しかし、Cutendではカレンダーの一日を自分で進めることができます。そのタイミングは「最高に楽しい」と感じた時です！
+    %span
+      「最高に楽しい瞬間」を一日の終りとして切り取り記念日にしてしまえるのです！
+  %p
+    さぁ！ Cutendで時空を歪め、毎日が記念日な自分だけの素敵な暦を作りましょう！
