#1 タイトルのロゴ画像修正

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,7 +21,8 @@
               %span.icon-bar
               %span.icon-bar
               %span.icon-bar
-            %a.brand(href="/") CUTEND
+            %a.brand(href="/") 
+              %img(src="/images/cutend-logo-opt.png" height="40")
             .container.nav-collapse
               %ul.nav.pull-right
                 %li= image_tag current_user.icon_url, :class => "avatar size32"
