#2 英語を日本語にした

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -27,8 +27,8 @@
               %ul.nav.pull-right
                 %li= image_tag current_user.icon_url, :class => "avatar size32"
                 %span= current_user.twitter_id
-                %li= link_to "anniversaries", "/anniversaries"
-                %li= link_to "HELP", "/help"
+                %li= link_to "一日一覧", "/anniversaries"
+                %li= link_to "ヘルプ", "/help"
 
   = yield
 
