--- a/app/views/anniversaries/new.html.haml
+++ b/app/views/anniversaries/new.html.haml
@@ -2,11 +2,11 @@
 
 =form_for(@anniversary) do |f|
   .form-field
-    = f.label :anniversary
+    = f.label 'タイトル'
     = f.text_field :anniversary
-    = f.label :description
+    = f.label '詳細'
     = f.text_area :description
   .submit-field
-    = f.submit
+    = f.submit '一日を終わらせる'
 
 = link_to 'Back', anniversaries_path
