#4 ログアウトボタン追加

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,6 +29,7 @@
                 %span= current_user.twitter_id
                 %li= link_to "一日一覧", "/anniversaries"
                 %li= link_to "ヘルプ", "/help"
+                %li= link_to "ログアウト", "/logout"
 
   = yield
 
