--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -18,4 +18,4 @@
     %span
       「最高に楽しい瞬間」を一日の終りとして切り取り記念日にしてしまえるのです！
   %p
-    さぁ！ Cutendで時空を歪め、毎日が記念日な自分だけの素敵な暦を作りましょう！
+    さぁ！ Cutendで時空を歪め、毎日が記念日な自分だけの素敵な暦を作りましょう！！
