--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -19,3 +19,6 @@
       「最高に楽しい瞬間」を一日の終りとして切り取り記念日にしてしまえるのです！
   %p
     さぁ！ Cutendで時空を歪め、毎日が記念日な自分だけの素敵な暦を作りましょう！！
+
+%footer
+  %p iPhoneユーザーへ真ん中のボタン（これは画像で説明）をおして、ホーム画面に追加（これも画像）で、アプリケーションのように（画像）使えるので、是非登録してください！
