#12 ヘルプページつくった

--- a/app/views/pages/help.html.haml
+++ b/app/views/pages/help.html.haml
@@ -1,2 +1,8 @@
-%h1 Pages#help
-%p Find me in app/views/pages/help.html.haml
+.contener
+  %img(src="images/cutend-logo-opt.png" width="640")
+
+  %div.row
+    %div.span4
+      %h2 DogMeetsとは？
+      %p サンプル文言です。サンプル文言です。サンプル文言です。サンプル文言です。サンプル文言です。サンプル文言です。サンプル文言です。
+      %img{:src => 'http://placehold.it/370x200'}
