--- a/app/views/anniversaries/new.html.haml
+++ b/app/views/anniversaries/new.html.haml
@@ -7,7 +7,7 @@
     = f.label 'タイトル'
     = f.text_field :anniversary
     = f.label '詳細'
-    = f.text_area :description
+    = f.text_area :description, :rows=>'4'
   .submit-field
     = f.submit '一日を終わらせる'
 
