--- a/app/views/anniversaries/show.html.haml
+++ b/app/views/anniversaries/show.html.haml
@@ -1,6 +1,4 @@
 %p#notice= notice
 
 
-= link_to 'Edit', edit_anniversary_path(@anniversary)
-\|
-= link_to 'Back', anniversaries_path
+= link_to '一日一覧', anniversaries_path
