--- a/app/views/pages/help.html.haml
+++ b/app/views/pages/help.html.haml
@@ -1,8 +1,24 @@
 .contener
   %img(src="images/cutend-logo-opt.png" width="640")
 
-  %div.row
-    %div.span4
-      %h2 DogMeetsとは？
-      %p サンプル文言です。サンプル文言です。サンプル文言です。サンプル文言です。サンプル文言です。サンプル文言です。サンプル文言です。
-      %img{:src => 'http://placehold.it/370x200'}
+%div
+  %h3 Cutendってなに？
+  %p Cutendは時空を歪ませる記念日登録サービスです！
+  %p 一日の終りは最高に楽しくしたいですよね？
+  %p そこで、Cutendでは「最高に楽しい瞬間」を一日の終りとして切り取り記念日にしてしまうのです！！
+
+  %h3 どーやって使うの？
+  %p 「最高に楽しい瞬間」を感じたらすぐさま
+  %p 「一日を終わらせるページ[url]」へ行きます！
+  %p そして、記念日の名前と詳細を書き込み
+  %p 「一日を終わらせる」ボタン押したら記念日にとして一日を終わらせることができます
+
+  %h3 Cutendってなんて読むの？
+  %p 開発者の一人は【カットエンド】と読んでます。
+  %p もう一人は【クテンド】で、一番頭の悪い子は【ピリオド】と読んでます。
+  %p 読み方に決まりはありません。自由に呼んでください。
+
+  %h3 Cutendの名前の由来は？
+  %p 様々な考察があります。
+  %p もっとも有力な説は『「Cutend→cut end→切り口面」最高に楽しい瞬間を切り取った面を表している』というものです。
+  %p また、『「Cuten→クテン→句点→。」「d→Dot→.」要するに「Cutendはピリオド、人生の区切りであることを示している！！」』というとんでもないものもあります。
