#20 文言ついあk

--- a/app/views/pages/singularity.html.haml
+++ b/app/views/pages/singularity.html.haml
@@ -1,3 +1,11 @@
 %h1 FIRST MISSION
 
+.desc
+  %p
+    Cutendは時空を歪ませる記念日登録サービスです！
+  %p
+    Cutendでは時空を歪ませ「最高に楽しい瞬間」を一日の終りと数えます。そう、「最高に楽しい瞬間」を一日の終りとして切り取り記念日にしてしまえるのです！
+  %p
+    さぁ！ Cutendで時空を歪め、毎日が記念日な自分だけの素敵な暦を作りましょう！！
+
 = link_to "時空を歪ませる！！","/singularity/execute", :class => 'btn btn-inverse btn-large'
