--- a/app/views/pages/help.html.haml
+++ b/app/views/pages/help.html.haml
@@ -9,7 +9,9 @@
 
   %h3 どーやって使うの？
   %p 「最高に楽しい瞬間」を感じたらすぐさま
-  %p 「一日を終わらせるページ[url]」へ行きます！
+  %p 
+    = link_to "一日を終わらせるページ", "/anniversaries/new"
+    へ行きます！
   %p そして、記念日の名前と詳細を書き込み
   %p 「一日を終わらせる」ボタン押したら記念日にとして一日を終わらせることができます
 
@@ -21,4 +23,4 @@
   %h3 Cutendの名前の由来は？
   %p 様々な考察があります。
   %p もっとも有力な説は『「Cutend→cut end→切り口面」最高に楽しい瞬間を切り取った面を表している』というものです。
-  %p また、『「Cuten→クテン→句点→。」「d→Dot→.」要するに「Cutendはピリオド、人生の区切りであることを示している！！」』というとんでもないものもあります。
+  %p また、『「Cuten→クテン→句点→。」「d→Dot→.」要するに「Cutendはピリオド、人生の区切りであることを示している！！ それはロゴデザインのDが傾いていることからも明らかだ！！』というとんでもないものもあります
