--- a/app/views/pages/help.html.haml
+++ b/app/views/pages/help.html.haml
@@ -20,6 +20,9 @@
   %p もう一人は【クテンド】で、一番頭の悪い子は【ピリオド】と読んでます。
   %p 読み方に決まりはありません。自由に呼んでください。
 
+  %h3 iPhoneユーザーへ
+  %p 真ん中のボタン（これは画像で説明）をおして、ホーム画面に追加（これも画像）で、アプリケーションのように（画像）使えるので、是非登録してください！
+
   %h3 Cutendの名前の由来は？
   %p 様々な考察があります。
   %p もっとも有力な説は『「Cutend→cut end→切り口面」最高に楽しい瞬間を切り取った面を表している』というものです。
