--- a/app/views/pages/singularity.html.haml
+++ b/app/views/pages/singularity.html.haml
@@ -8,4 +8,5 @@
   %p
     さぁ！ Cutendで時空を歪め、毎日が記念日な自分だけの素敵な暦を作りましょう！！
 
+.button
 = link_to "時空を歪ませる！！","/singularity/execute", :class => 'btn btn-inverse btn-large'
