--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,7 +28,7 @@
                 %li= image_tag current_user.icon_url, :class => "avatar size32"
                 %span= current_user.twitter_id
                 %li= link_to "一日を終わらせる", "/anniversaries/new"
-                %li= link_to "一日一覧へ", "/anniversaries"
+                %li= link_to "一日一覧", "/anniversaries"
                 %li= link_to "ヘルプ", "/help"
                 %li= link_to "ログアウト", "/logout"
 
