--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -22,8 +22,6 @@ p.login-btn {
 
 p.login-btn a {
   color: white; }
-.desc {
-}
 
-.endday-btn a {
-  color: white;}
+div.endday-btn a {
+  color: white; }
