#24 画像を追加

--- a/app/views/pages/help.html.haml
+++ b/app/views/pages/help.html.haml
@@ -15,6 +15,11 @@
   %p そして、記念日の名前と詳細を書き込み
   %p 「一日を終わらせる」ボタン押したら記念日にとして一日を終わらせることができます
 
+  %h3 Twitterでつぶやくよ
+  %p 一日を終わらせると、自動的にTwitterに
+  %img(src="/images/ss.png" width="640")
+  %p とつぶやかれます。超！COOOOOL！！
+
   %h3 Cutendってなんて読むの？
   %p 開発者の一人は【カットエンド】と読んでます。
   %p もう一人は【クテンド】で、一番頭の悪い子は【ピリオド】と読んでます。
