--- a/app/views/anniversaries/new.html.haml
+++ b/app/views/anniversaries/new.html.haml
@@ -4,7 +4,7 @@
 
 =form_for(@anniversary) do |f|
   .form-field
-    = f.label 'タイトル'
+    = f.label '記念日名'
     = f.text_field :anniversary
     = f.label '詳細'
     = f.text_area :description, :rows=>'4'
