--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,7 +22,7 @@
               %span.icon-bar
               %span.icon-bar
             %a.brand(href="/anniversaries")
-              %img(src="/images/cutend-logo-opt.png" height="40")
+              %img(src="/images/cutend-logo-opt-white.png" height="40")
             .container.nav-collapse
               %ul.nav.pull-right
                 %li= image_tag current_user.icon_url, :class => "avatar size32"
