--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,13 +24,14 @@
             %a.brand(href="/anniversaries")
               %img(src="/images/cutend-logo-opt-white.png" height="40")
             .container.nav-collapse
-              %ul.nav.pull-right
-                %li= image_tag current_user.icon_url, :class => "avatar size32"
-                %span= current_user.twitter_id
-                %li= link_to "一日を終わらせる", "/anniversaries/new"
-                %li= link_to "一日一覧", "/anniversaries"
-                %li= link_to "ヘルプ", "/help"
-                %li= link_to "ログアウト", "/logout"
+              -if false_list == true
+                %ul.nav.pull-right
+                  %li= image_tag current_user.icon_url, :class => "avatar size32"
+                  %span= current_user.twitter_id
+                  %li= link_to "一日を終わらせる", "/anniversaries/new"
+                  %li= link_to "一日一覧", "/anniversaries"
+                  %li= link_to "ヘルプ", "/help"
+                  %li= link_to "ログアウト", "/logout"
 
   = yield
 
