added some screenshots and edited pages/index.html.

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -21,4 +21,7 @@
     さぁ！ Cutendで時空を歪め、毎日が記念日な自分だけの素敵な暦を作りましょう！！
 
 %footer
-  %p iPhoneユーザーへ真ん中のボタン（これは画像で説明）をおして、ホーム画面に追加（これも画像）で、アプリケーションのように（画像）使えるので、是非登録してください！
+  %p iPhoneユーザーの方へ。真ん中のボタン（一枚目の図）をおして、ホーム画面に追加（二枚目の図）で、アプリケーションのように（三枚目の図）使えるので、是非登録してください！
+  %img(src="images/details/add.png" width="640")
+  %img(src="images/details/add-to-home.png" width="640")
+  %img(src="images/details/desktop.png" width="640")
