edited pages/index.html and help.html

--- a/app/views/pages/help.html.haml
+++ b/app/views/pages/help.html.haml
@@ -20,9 +20,6 @@
   %img(src="/images/ss.png" width="640")
   %p とつぶやかれます。超！COOOOOL！！
 
-  %h3 iPhoneユーザーへ
-  %p 真ん中のボタン（これは画像で説明）をおして、ホーム画面に追加（これも画像）で、アプリケーションのように（画像）使えるので、是非登録してください！
-
   %h3 Cutendってなんて読むの？
   %p 開発者の一人は【カットエンド】と読んでます。
   %p もう一人は【クテンド】で、一番頭の悪い子は【ピリオド】と読んでます。
@@ -32,3 +29,9 @@
   %p 様々な考察があります。
   %p もっとも有力な説は『「Cutend→cut end→切り口面」最高に楽しい瞬間を切り取った面を表している』というものです。
   %p また、『「Cuten→クテン→句点→。」「d→Dot→.」要するに「Cutendはピリオド、人生の区切りであることを示している！！ それはロゴデザインのDが傾いていることからも明らかだ！！』というとんでもないものもあります
+
+  %p iPhoneユーザーの方へ。真ん中のボタン（一枚目の図）をおして、ホーム画面に追加（二枚目の図）で、アプリケーションのように（三枚目の図）使えるので、是非登録してください！
+
+  %img(src="images/details/add.png" width="320")
+  %img(src="images/details/add-to-home.png" width="320")
+  %img(src="images/details/desktop.png" width="320")
