edited some files related to views.

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -16,6 +16,8 @@ pre {
   background-color: #eee;
   padding: 10px;
   font-size: 11px; }
+.ichinichi-ichiran {
+  margin:10px 0;}
 
 footer {
   margin-top: 20px; }
